--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newsapp",
   "version": "0.1.0",
-  "homepage": "https://github.com/Raj-k16/Hindi-Khabar.git",
+  "homepage": "https://Raj-k16.github.io/Hindi-Khabar.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
